fix spacings in OrionAvatar

--- a/packages/Avatar/src/OrionAvatar.less
+++ b/packages/Avatar/src/OrionAvatar.less
@@ -4,7 +4,7 @@
 .orion-avatar {
 	display: flex;
 	align-items: center;
-	gap: var(--spacing-sm);
+	gap: var(--spacing-8);
 
 	&__pill {
 		transition: all 0.3s;
@@ -190,23 +190,23 @@
 	}
 
 	&--xl {
-		gap: var(--spacing-sm);			
+		gap: var(--spacing-8);			
 	}
 
 	&--lg {
-			gap: var(--spacing-sm);
+			gap: var(--spacing-8);
 	}
 
 	&--md {
-			gap: var(--spacing-xs);
+			gap: var(--spacing-6);
 	}
 
-	&--sm {
-			gap: var(--spacing-xs);
+	&--8 {
+			gap: var(--spacing-6);
 	}
 
 	&--xs {
-		gap: var(--spacing-xxs);
+		gap: var(--spacing-4);
 	}
 
 	&--square {
@@ -216,8 +216,8 @@
 
 		.orion-avatar__picto {
 			transform: translate3d(
-				calc(var(--spacing-sm) * 0.5),
-				calc(var(--spacing-sm) * 0.5),
+				calc(var(--spacing-8) * 0.5),
+				calc(var(--spacing-8) * 0.5),
 				0
 			);
 		}
